--- a/index.html
+++ b/index.html
@@ -97,5 +97,27 @@
             }
         });
     </script>
+    <section class="mb-12 bg-slate-800/50 p-6 rounded-xl border border-slate-700">
+    <h2 class="text-xl font-semibold text-emerald-400 mb-4">The Strategic Business Case</h2>
+    <p class="text-slate-300 leading-relaxed mb-4">
+        In modern analytics, the bottleneck for high-performance modeling is rarely the algorithm, but the integrity of the underlying data. This dashboard monitors the <strong>'Data-to-Model'</strong> pipeline, calculating a real-time <strong>Integrity Score</strong> that accounts for successful record ingestion and field-level null density. By visualizing the inverse correlation between data quality and <strong>Model MAPE</strong> (Mean Absolute Percentage Error), this tool enables Data Operations teams to proactively identify 'Schema Drift' in disparate sources—such as Google Ads, Meta, or BigQuery—before it compromises downstream business decisions.
+    </p>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-6 pt-6 border-t border-slate-700">
+        <div>
+            <h3 class="text-sm font-bold text-slate-400 uppercase tracking-widest mb-2">Technical Methodology</h3>
+            <ul class="text-sm text-slate-400 list-disc ml-5 space-y-1">
+                <li>Automated ETL logic utilizing SQL CTEs to flag record-level anomalies[cite: 29, 30].</li>
+                <li>Stochastic simulation of 'Privacy Strictness' to project impact on forecast accuracy[cite: 14].</li>
+                <li>Schema validation protocols to identify unexpected volatility in third-party datasets.</li>
+            </ul>
+        </div>
+        <div>
+            <h3 class="text-sm font-bold text-slate-400 uppercase tracking-widest mb-2">Systems Thinking Applied</h3>
+            <p class="text-sm text-slate-400 italic">
+                Leveraging Chemical Engineering principles of "Mass Balance" to ensure data conservation across the pipeline—what enters the warehouse must be accounted for in the model.
+            </p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
